--- a/Research.bib
+++ b/Research.bib
@@ -1,141 +1,67 @@
-@book{bornat1986programming,
-  title={Programming from First Principles},
-  author={Bornat, Richard},
-  year={1986},
-  publisher={Pearson Education Limited}
+@article{cavallaro2010anime,
+  title={Anime and the Visual Novel: Narrative Structure, Design and Play at the Crossroads of Animation and Computer Games},
+  author={Cavallaro, Dani},
+  journal={McFarland \& Company Inc., North Carolina},
+  year={2010}
 }
 
-@article{murnane1993psychology,
-  title={The psychology of computer languages for introductory programming courses},
-  author={Murnane, John S},
-  journal={New Ideas in Psychology},
-  volume={11},
-  number={2},
-  pages={213--228},
-  year={1993},
-  publisher={Elsevier}
+@electronic{crimmins2016,
+  year={2016},
+  month={January},
+  day={7},
+  author={Crimmins, Brian},
+  title={A Brief History of Visual Novels},
+  url={https://medium.com/mammon-machine-zeal/a-brief-history-of-visual-novels-641a2e6b1acb}
 }
 
-@article{johnson1978psychology,
-  title={The psychology of syllogisms},
-  author={Johnson-Laird, Philip N and Steedman, Mark},
-  journal={Cognitive psychology},
-  volume={10},
-  number={1},
-  pages={64--99},
-  year={1978},
-  publisher={Academic Press}
-}   
-
-@article{mccracken2001multi,
-  title={A multi-national, multi-institutional study of assessment of programming skills of first-year CS students},
-  author={McCracken, Michael and Almstrum, Vicki and Diaz, Danny and Guzdial, Mark and Hagan, Dianne and Kolikant, Yifat Ben-David and Laxer, Cary and Thomas, Lynda and Utting, Ian and Wilusz, Tadeusz},
-  journal={ACM SIGCSE Bulletin},
-  volume={33},
-  number={4},
-  pages={125--180},
-  year={2001},
-  publisher={ACM}
+@electronic{jacob2013,
+  year={2013},
+  month={October},
+  day={10},
+  author={Jacob, Shine},
+  title={Game Programming in \C - For Beginners},
+  url={https://codeproject.com/Articles/447332/Game-Programming-in-C-For-Beginners}
 }
 
-@article{dehnadi2006camel,
-  title={The camel has two humps (working title)},
-  author={Dehnadi, Saeed and Bornat, Richard},
-  journal={Middlesex University, UK},
-  pages={1--21},
-  year={2006}
+@article{miyake2011interactive,
+  title={An interactive system for structure-based ASCII art creation},
+  author={Miyake, Katsunori and Johan, Henry and Nishita, Tomoyuki},
+  journal={Proc. NICOGRAPH International},
+  volume={2},
+  year={2011}
 }
 
-@inproceedings{bornat2008mental,
-  title={Mental models, consistency and programming aptitude},
-  author={Bornat, Richard and Dehnadi, Saeed and others},
-  booktitle={{Proceedings of the tenth conference on Australasian computing education}},
-  volume={78},
-  pages={53--61},
+@article{ogrady2008automatic,
+  title={Automatic ASCII art conversion of binary images using non-negative constraints},
+  author={O'Grady, Paul D and Rickard, Scott T},
   year={2008},
-  organization={Australian Computer Society, Inc.}
+  publisher={IET}
 }
 
-@article{bornat2014camels,
-  title={Camels and humps: a retraction},
-  author={Bornat, Richard},
-  year={2014}
+@article{singh2015research,
+  title={Research paper on \C language},
+  author={Singh, Kawalpreet},
+  year={2015},
+  publisher={International Journal of Innovative Research in Technology}
 }
 
-@article{ford2010assessing,
-  title={Assessing the success of an introductory programming course},
-  author={Ford, Marilyn and Venema, Sven},
-  journal={Journal of Information Technology Education: Research},
-  volume={9},
-  number={1},
-  pages={133--145},
+@electronic{cprogramming,
+  title={C Programming Language Semantics},
+  url={https://arcc.uwyo.edu/wiki/c-programming-language-semantics}
+}
+
+@electronic{visualnovel,
+  title={Visual Novel},
+  url={http://tvtropes.org/pmwiki/pmwiki.php/Main/VisualNovel}
+}
+
+@inproceedings{xu2010structure,
+  title={Structure-based ASCII art},
+  author={Xu, Xuemiao and Zhang, Linling and Wong, Tien-Tsin},
+  booktitle={ACM Transactions on Graphics (TOG)},
+  volume={29},
+  number={4},
+  pages={52},
   year={2010},
-  publisher={Informing Science Institute}
-}
-
-@electronic{bricklin2002,
- date = {2002},
- author = {Bricklin, Dan},
- title = {Why {J}ohnny can't program},
- url = {http://www.bricklin.com/wontprogram.htm},
-}
-
-@electronic{onlinetest,
-  author = {\L{}opuza\'{n}ski, Jakub},
-  url = {http://vanisoft.pl/~lopuszanski/public/canihascs/},
-}
-
-@electronic{ferguson,
- author = {Ferguson, Cat},
- year = {2014},
- title = {The camel doesn’t have two humps: Programming ``aptitude test'' canned for overzealous conclusion},
- url = {http://retractionwatch.com/2014/07/18/the-camel-doesnt-have-two-humps-programming-aptitude-test-canned-for-overzealous-conclusion/},
-}
-
-@misc{iverilog,
- author = {Icarus},
- title = {Icarus Verilog [Computer Software]},
-}
-
-@inproceedings{chalk2003improving,
-  title={Improving pass rates in introductory programming},
-  author={Chalk, Peter and Boyle, Tom and Pickard, Poppy and Bradley, Claire and Jones, Ray and Fisher, Ken},
-  booktitle={{Proceedings of the 4th Annual LTSN-ICS Conference}},
-  pages={6--10},
-  year={2003}
-}
-
-@inproceedings{karahasanovic2007difficulties,
-  title={Difficulties experienced by students in maintaining object-oriented systems: an empirical study},
-  author={Karahasanovi{\'c}, Amela and Thomas, Richard C.},
-  booktitle={{Proceedings of the ninth Australasian conference on Computing education}},
-  volume={66},
-  pages={81--87},
-  year={2007},
-  organization={Australian Computer Society, Inc.}
-}
-
-@article{pears2002describing,
-  title={Describing computer science education research: an academic process view},
-  author={Pears, Arnold and Daniels, Mats and Berglund, Anders}
-}
-
-@inproceedings{strnadprogramming,
-  title={Programming aptitude and learning success in the introductory course on programming},
-  author={Strnad, Mateja and {\v{S}}erbec, Irena Nan{\v{c}}ovska and Rugelj, Jo{\v{z}}e}
-  year={2009},
-  month={September},
-  organization={Conference ICL}
-}
-
-
-@inproceedings{caspersen2007mental,
-  title={Mental models and programming aptitude},
-  author={Caspersen, Michael E and Larsen, Kasper Dalgaard and Bennedsen, Jens},
-  booktitle={{ACM SIGCSE Bulletin}},
-  volume={39},
-  number={3},
-  pages={206--210},
-  year={2007},
   organization={ACM}
 }
