--- a/Research.org
+++ b/Research.org
@@ -115,25 +115,21 @@
 ** Rationale
 This research is an application of our Computer Programming course.
 This research aims to give highlight to a new and unconventional form of media image presentation
-which is ASCII (American Standard Code for Information Interchange) art and is currently mostly unknown or underestimated by various people.
+which is American Standard Code for Information Interchange(hereinafter referred to ASCII) art;
+this form of art was once prevalent however due to the increasing graphical capabilities of computers,
+it quickly subsided into a niche.
 We aim to develop an engine which would convert visual images to ASCII art,
 and apply it to various forms of media,
 such as visual novels, text-based games, or animations.
 
-Facebook has created a neural network that detects the components of a scene and provides an automatic description, however,
-it is unable to understand lower level constructs such as structures and context.
-This research is able to avoid that problem by re-creating the image.
-If the image is accurate enough,
-it can also serve as a preview of the image.
 ** Statement of the Problem
   1. As an Engine
 
     The problem in our project is the integration of Visual Images to ASCII art.
     Thus, we have the following objectives:
     1. To see if the engine is fully functional and usable.
-    2. To clear out any bugs in the system.
-    3. To check if the image is usable and understandable to the user.
-    4. To be able to convert any Visual Image to ASCII art.
+    2. To check if the image is usable and understandable to the user.
+    3. To be able to convert any Visual Image to ASCII art.
   2. As a Product
 
     The next problem is if the product sells.
@@ -151,10 +147,19 @@ The success of this study will provide clues on the information relevant to reco
 It also experiments with the mixture of two rendering methods and compositing it into one image in order to enhance the quality of the image.
 Due to the inherent characteristics of the program, it also has the advantage in being able to be used in text-only displays
 such as the HD44780 which is a controller for character-based liquid crystal displays, and older phones and pagers; and also be used in bad signal conditions.
-ASCII art has long been used to visually represent complex structures on chat systems such as IRC(Internet Relay Chat), and
+ASCII art has long been used to visually represent complex structures on chat systems such as Internet Relay Chat, and
 also in the days of modem as not only was the internet connection limited,
 it was also too slow to reasonably load images; without ASCII art,
 complex structures would be impossible to transfer in a reasonable amount of time for real-time communication.
+
+Facebook has created a neural network that detects the components of a scene and provides an automatic description, however,
+it is unable to understand lower level constructs such as structures and context.
+To provide an example, the neural network may output ``1 smiling person,'' 
+however that gives no information on how the person smiled,
+and even worse, it doesn't *show* how the person looks like.
+This research is able to alleviate that problem by re-creating the image.
+If the image is accurate enough, it can also serve as a preview of the image.
+
 ** Scope and Limitation
 The study will be conducted within a span of 3 months,
 with a month dedicated to experimentation and a week for survey to receive feedback
@@ -227,11 +232,11 @@ by means of extensive text conversations complemented by lovingly depicted gener
 with characters sprites determining the speaker superimposed upon them.
 * Methodology
 ** Luminosity
-The luminosity or brightness  of the two sprites are compared to one another and
+The luminosity or brightness of the two sprites are compared to one another and
 the following metric is used in order to determine which sprite to use.
 The definition used for luminosity in this study is the arithmetic mean:
 \begin{align}
-\frac{1}{n}\sum\limits_{i = 1}^{n} _i
+\frac{1}{n}\sum\limits_{i = 1}^{n} x_i
 \end{align}
 of the pixel values; where 
 \(x_i\) is the \(i\)th pixel value; and
@@ -241,22 +246,21 @@ Or equivalently
 \sum\limits_{i = 1}^{n} \frac{x_i}{n}
 \end{align}
 
-However, for large values of \(n\), overflow may occur. 
-Instead, the following online algorithm is used
-\begin{align}
-\begin{split}
-dx &= \overline{x}_i - x_i\\
-\overline{x}_{i+1} &= \overline{x}_i + \frac{dx}{i + 1}
-\end{split}
-\end{align}
+# TODO: GCC auto-vectorization
+In order to increase the performance, we take advantage of GNU C Compiler(hereinafter referred to as GCC)'s auto-vectorization.
+This results in the following code
 \begin{lstlisting}
-for (int i = 0; i < n; ++i)
+for (i = 0;
+      i < length(xarray);
+      i += 8)
   {
-    float dx = x_i - x_mean;
-    x_mean += dx/(i + 1);
+   for (i_ = 0; i_ < length(partialsumx); ++i_)
+    {
+  	  partialsumx[i_] += xarray[i + i_];
+  	  partialsumy[i_] += yarray[i + i_];
+    }
   }
 \end{lstlisting}
-which starts with \(i = 0\).
 
 A cache is built and stored in an ordered array and 
 a linear search is then performed and 
@@ -331,15 +335,24 @@ where the weights are typically \(\alpha = \beta = \gamma = 1\).
 
 # This gives SSIM its name -- Structural SIMilarity.
 
+** Testing
+Portable Network Graphics(hereinafter referred to as PNG, or png) images are taken from the database
+# TODO: DATABASE
+and the ASCII art is renderer is run in batch mode in order to assess the robustness fo the program.
+Technically, this does not prove that the program is correct but it will allow us to assume with high probability that it is either correct or incorrect.
+
 ** Comparison
-Following the works of cite:xu2010structure,
+Following the works of cite:xu2010structure, 
+we will ask the participants to answer a 10-scale rating with two criteria: accuracy and clarity.
+Once the data is collected, the data is treated in two ways in order to objectively measure on how well it compares to the source image
+and how well it compares to other rendering methods.
+*** Comparison to other rendering methods
 participants will be asked to rate on a 1-10 scale on the accuracy and clarity of the generated ASCII art and a hand-drawn ASCII art.
 Once the data is collected, the mean and the standard deviation are taken, and
-the efficiency(accuracy/clarity per unit time) is compared.
+the efficiency(accuracy and clarity per unit time) is compared.
 #+LATEX: \RaggedRight
 #+LATEX: \clearpage
 #+LATEX: \addcontentsline{toc}{section}{References}
-
 bibliography:Research.bib
 bibliographystyle:apacite
 #+LATEX: \clearpage
@@ -371,13 +384,6 @@ bibliographystyle:apacite
 \caption{Timeline}
 \end{figure}
 
-# Local Variables:
-# mode: org
-# org-latex-pdf-process: ("lualatex -interaction nonstopmode -output-directory %o %f" "bibtex %b"  "makeglossaries %b" "lualatex -interaction nonstopmode -output-directory %o %f" "lualatex -interaction nonstopmode -output-directory %o %f")
-# org-latex-caption-above: nil
-# DISABLED: org-latex-pdf-process: ("pdflatex -interaction nonstopmode -output-directory %o %f" "bibtex %b" "makeglossaries %b" "pdflatex -interaction nonstopmode -output-directory %o %f" "pdflatex -interaction nonstopmode -output-directory %o %f")
-# End:
-
 #+LATEX: \RaggedRight
 #+LATEX: \clearpage
 #+LATEX: \addcontentsline{toc}{section}{References}
@@ -388,7 +394,7 @@ bibliographystyle:apacite
 
 # Local Variables:
 # mode: org
-# org-latex-pdf-process: ("lualatex -interaction nonstopmode -output-directory %o %f" "bibtex %b"  "makeglossaries %b" "lualatex -interaction nonstopmode -output-directory %o %f" "lualatex -interaction nonstopmode -output-directory %o %f")
+# org-latex-pdf-process: ("xelatex -interaction nonstopmode -output-directory %o %f" "bibtex %b"  "makeglossaries %b" "xelatex -interaction nonstopmode -output-directory %o %f" "xelatex -interaction nonstopmode -output-directory %o %f")
 # org-latex-caption-above: nil
 # DISABLED: org-latex-pdf-process: ("pdflatex -interaction nonstopmode -output-directory %o %f" "bibtex %b" "makeglossaries %b" "pdflatex -interaction nonstopmode -output-directory %o %f" "pdflatex -interaction nonstopmode -output-directory %o %f")
 # End:
